--- a/common/presentation/build.gradle
+++ b/common/presentation/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     implementation Deps.androidx_appCompat
     implementation Deps.androidx_coreKtx
     api Deps.androidx_recyclerView
-    implementation Deps.androidx_paging
+    api Deps.androidx_paging
     implementation Deps.androidx_lifeCycle
     api Deps.androidx_constraintLayout
 
