--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
 }
 
 dependencies {
-    implementation project(Module.presentation)
-    implementation project(Module.data)
+    implementation project(AppModule.presentation)
+    implementation project(AppModule.data)
 
 }
