--- a/common/presentation/build.gradle
+++ b/common/presentation/build.gradle
@@ -9,7 +9,7 @@ android {
 }
 
 dependencies {
-    api project(Module.data)
+    api project(AppModule.data)
 
     implementation Deps.androidx_appCompat
     implementation Deps.androidx_coreKtx
