--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    ext.kotlin_version = '1.5.10'
 
     repositories {
         jcenter()
@@ -12,7 +12,7 @@ buildscript {
         // NOTE: Do not place your application versions here; they belong
         // in the individual module build.gradle files
 
-        classpath 'com.google.gms:google-services:4.3.3'
+        classpath 'com.google.gms:google-services:4.3.8'
 
         // These docs use an open ended version so that our plugin
         // can be updated quickly in response to Android tooling updates
@@ -22,8 +22,8 @@ buildscript {
 
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.2.0-rc03"
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.3.0'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.0-alpha03"
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.0'
     }
 }
 
